--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Simple Text Sync",
-    "version": "1",
+    "name": "Write Wall",
+    "version": "1.2",
     "manifest_version": 2,
     "incognito": "split",
-    "description": "A simple sync-able text pad",
+    "description": "A simple, sync-able text pad similar to Write Space",
     "browser_action": {
         "default_icon": "images/icon.png"
     },
