--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,6 +15,7 @@
     "browser_action": {
         "default_icon": "images/icon.png"
     },
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "background": {
         "scripts": [
             "js/background.js"
