--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Write Wall",
-    "version": "1.3",
+    "version": "2.0",
     "manifest_version": 2,
     "incognito": "split",
     "description": "A simple, sync-able text pad similar to Write Space",
@@ -15,7 +15,7 @@
     "browser_action": {
         "default_icon": "images/icon.png"
     },
-    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'sha256-nNGvbNOXxvM4cXS9511XXfSv1uzm+VgcO7aozPcZqfE=' https://www.googletagmanager.com https://www.google-analytics.com; object-src 'self'",
     "background": {
         "scripts": [
             "js/background.js"
