--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,29 @@
 {
   "extends": [
-    "airbnb",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "prettier/react"
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "prettier"
   ],
-  "plugins": ["jsx-a11y", "prettier"],
+  "env": {
+    "es2020": true,
+    "jest/globals": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "ecmaFeatures": {
+      "impliedStrict": true
+    }
+  },
+  "plugins": ["prettier", "jest"],
   "rules": {
     "consistent-return": ["off"],
     "no-param-reassign": ["error", {"ignorePropertyModificationsFor": ["consoleElement"]}],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-console": ["warn", {"allow": ["warn", "error"]}],
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error",
     "prettier/prettier": [
       "error",
       {
