--- a/package.json
+++ b/package.json
@@ -7,20 +7,16 @@
     "test": "jest",
     "build": "yarn build/build.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "prettier": "^2.1.1",
-    "jest": "^26.4.2",
-    "eslint": "^7.8.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/user-event": "^12.1.3"
+    "@testing-library/user-event": "^12.1.3",
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.2",
+    "prettier": "^2.1.1"
   },
   "browserslist": [
     "> 1%",
