--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Write Wall",
+    "name": "Write Wall dev",
     "version": "2.0.1",
     "manifest_version": 2,
     "incognito": "split",
@@ -15,7 +15,7 @@
     "browser_action": {
         "default_icon": "images/icon.png"
     },
-    "content_security_policy": "script-src 'self' 'sha256-nNGvbNOXxvM4cXS9511XXfSv1uzm+VgcO7aozPcZqfE=' https://www.googletagmanager.com https://www.google-analytics.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'sha256-TwvxJOnzfKBmfHhUUzpQYwE852o/8hXNMXmloT1Vt5Y=' https://www.googletagmanager.com https://www.google-analytics.com; object-src 'self'",
     "background": {
         "scripts": [
             "js/background.js"
