--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Write Wall dev",
-    "version": "2.0.2",
+    "name": "Write Wall",
+    "version": "2.0.3",
     "manifest_version": 2,
     "incognito": "split",
     "description": "A simple, sync-able text pad similar to Write Space",
