--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Write Wall",
-    "version": "2.0.4",
-    "manifest_version": 2,
+    "version": "2.0.5",
+    "manifest_version": 3,
     "incognito": "split",
     "description": "A simple, sync-able text pad similar to Write Space",
     "icons": {
@@ -12,16 +12,17 @@
         "128": "images/icon-128.png",
         "512": "images/icon-512.png"
     },
-    "browser_action": {
-        "default_icon": "images/icon.png"
+    "action": {
+        "default_icon": {
+          "16": "images/icon-16.png",
+          "19": "images/icon.png",
+          "48": "images/icon-48.png"
+        }
     },
-    "content_security_policy": "script-src 'self' 'sha256-TwvxJOnzfKBmfHhUUzpQYwE852o/8hXNMXmloT1Vt5Y=' https://www.googletagmanager.com https://www.google-analytics.com; object-src 'self'",
     "background": {
-        "scripts": [
-            "js/background.js"
-        ]
+        "service_worker": "js/service_worker.js"
     },
     "permissions": [
-        "storage"
+      "storage"
     ]
 }
