--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "write-wall",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "A simple, sync-able text pad similar to Write Space",
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "yarn build/build.js"
+    "build": "node build/build.js"
   },
   "engines": {
-    "node": "^16.0.0"
+    "node": "^20.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/user-event": "^14.2.1",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.2",
-    "prettier": "^2.1.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8"
   },
   "browserslist": [
     "> 1%",
