--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "write-wall",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "description": "A simple, sync-able text pad similar to Write Space",
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "node build/build.js"
+    "build": "webpack --config webpack/webpack.config.js"
   },
   "engines": {
     "node": "^20.0.0"
@@ -13,16 +13,18 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
+    "@tsconfig/node20": "^1.0.0",
+    "@types/chrome": "^0.0.235",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "prettier": "^2.8.8"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie"
-  ]
+    "prettier": "^2.8.8",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.1"
+  }
 }
