--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Write Wall",
-    "version": "2.0.5",
+    "version": "2.1.0",
     "manifest_version": 3,
     "incognito": "split",
     "description": "A simple, sync-able text pad similar to Write Space",
@@ -20,7 +20,7 @@
         }
     },
     "background": {
-        "service_worker": "js/service_worker.js"
+        "service_worker": "service_worker.bundle.js"
     },
     "permissions": [
       "storage"
