- Begin adding in tests - Hook up Husky so to ensure hooks are run committing code - Migrate throttle to a utility file - Make some other adjustments

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
       },
       "plugins": ["prettier", "jest"],
       "rules": {
+        "array-bracket-spacing": ["error", "always", {"singleValue":  true}],
         "consistent-return": ["off"],
         "no-param-reassign": ["error", {"ignorePropertyModificationsFor": ["consoleElement"]}],
         "no-console": ["warn", {"allow": ["warn", "error"]}],
