--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "jest",
     "develop": "webpack --config webpack/webpack.config.js --watch",
-    "build": "webpack --config webpack/webpack.config.js && node build.js"
+    "build": "npm test && webpack --config webpack/webpack.config.js && node build.js",
+    "prepare": "husky install"
   },
   "engines": {
     "node": "^20.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/node20": "^1.0.0",
@@ -24,9 +26,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "husky": "^8.0.0"
   }
 }
