--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,17 @@
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "sourceMap": true,
-    "rootDir": "src",
-    "outDir": "dist/js",
+    "module": "ES2022",
+    "moduleResolution": "NodeNext",
+    "rootDir": ".",
+    "outDir": "dist/",
     "noEmitOnError": true,
     "noImplicitThis": false,
     "lib": ["dom", "ES2022"],
     "jsx": "react",
     "typeRoots": ["node_modules/@types"]
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
