add artifact path to ci/cd script

--- a/.codegiant-ci.yml
+++ b/.codegiant-ci.yml
@@ -42,7 +42,8 @@ spec:
       name: task-run
       params:
         - name: artifacts
-          value: []
+          value:
+            - app.zip
 
 
 ---
