--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
   "name": "write-wall",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "A simple, sync-able text pad similar to Write Space",
   "license": "CC-BY-SA-4.0",
   "private": true,
   "scripts": {
     "test": "jest",
     "develop": "webpack --config webpack/webpack.config.js --watch",
-    "build": "npm test && webpack --config webpack/webpack.config.js && node build.js",
+    "build": "webpack --config webpack/webpack.config.js && node build.js",
     "prepare": "husky install"
   },
   "engines": {
     "node": "^20.0.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@tsconfig/node20": "^1.0.0",
-    "@types/chrome": "^0.0.235",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/user-event": "^14.5.2",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/chrome": "^0.0.254",
     "adm-zip": "^0.5.10",
     "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "husky": "^8.0.3"
   }
 }
