--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A simple, sync-able text pad similar to Write Space",
   "license": "CC-BY-SA-4.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "test": "jest",
-    "develop": "webpack --config webpack/webpack.config.js --watch",
-    "build": "webpack --config webpack/webpack.config.js && node build.js",
+    "develop": "webpack --config webpack/webpack.config.cjs --watch",
+    "build": "webpack --config webpack/webpack.config.cjs && node build.cjs",
     "prepare": "husky install"
   },
+  "engineStrict": true,
   "engines": {
     "node": "^20.0.0"
   },
@@ -25,13 +27,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-prettier": "^5.1.2",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "husky": "^8.0.3"
+    "webpack-cli": "^5.1.4"
   }
 }
