chore: Update manifest.json, package.json, and rebuild app.zip
- Update all dependencies to latest
- Upgrade eslint to latest
- lint all files correctly

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ insert_final_newline = true
 max_line_length = 120
 tab_width = 2
 
-[{*.js,*.cjs}]
+[{*.js,*.cjs,*.mjs}]
 ij_javascript_use_double_quotes = false
 ij_javascript_force_quote_style = true
 
