--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
   "name": "write-wall",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "description": "A simple, sync-able text pad similar to Write Space",
   "license": "CC-BY-SA-4.0",
   "private": true,
   "type": "module",
   "scripts": {
     "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "develop": "webpack --config webpack/webpack.config.cjs --watch",
     "build": "webpack --config webpack/webpack.config.cjs && node build.cjs",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "engineStrict": true,
   "engines": {
-    "node": "^20.0.0"
+    "node": "^20.0.0 || ^22.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
     "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/chrome": "^0.0.260",
-    "adm-zip": "^0.5.10",
+    "@types/chrome": "^0.0.270",
+    "@types/eslint__js": "^8.42.3",
+    "adm-zip": "^0.5.16",
     "copy-webpack-plugin": "^12.0.2",
-    "eslint": "^8.56.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
+    "husky": "^9.1.5",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
 }
