--- a/jest.config.json
+++ b/jest.config.json
@@ -3,9 +3,7 @@
   "testEnvironment": "node",
   "clearMocks": true,
   "coverageProvider": "v8",
-  "extensionsToTreatAsEsm": [
-    ".ts"
-  ],
+  "extensionsToTreatAsEsm": [".ts"],
   "moduleNameMapper": {
     "^(\\.{1,2}/.*)\\.js$": "$1"
   },
