--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,26 @@
 {
-    "name": "Write Wall",
-    "version": "2.3.0",
-    "manifest_version": 3,
-    "incognito": "split",
-    "description": "A simple, sync-able text pad similar to Write Space",
-    "icons": {
-        "16": "images/icon-16.png",
-        "19": "images/icon.png",
-        "48": "images/icon-48.png",
-        "64": "images/icon-64.png",
-        "128": "images/icon-128.png",
-        "512": "images/icon-512.png"
-    },
-    "action": {
-        "default_icon": {
-          "16": "images/icon-16.png",
-          "19": "images/icon.png",
-          "48": "images/icon-48.png"
-        }
-    },
-    "background": {
-        "service_worker": "service_worker.bundle.js"
-    },
-    "permissions": [
-      "storage"
-    ]
+  "name": "Write Wall",
+  "version": "2.3.0",
+  "manifest_version": 3,
+  "incognito": "split",
+  "description": "A simple, sync-able text pad similar to Write Space",
+  "icons": {
+    "16": "images/icon-16.png",
+    "19": "images/icon.png",
+    "48": "images/icon-48.png",
+    "64": "images/icon-64.png",
+    "128": "images/icon-128.png",
+    "512": "images/icon-512.png"
+  },
+  "action": {
+    "default_icon": {
+      "16": "images/icon-16.png",
+      "19": "images/icon.png",
+      "48": "images/icon-48.png"
+    }
+  },
+  "background": {
+    "service_worker": "service_worker.bundle.js"
+  },
+  "permissions": ["storage"]
 }
