--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "vitest run",
     "lint": "biome check --diagnostic-level=error",
     "lint:fix": "biome check --write --diagnostic-level=error",
     "develop": "webpack --config webpack/webpack.config.cjs --watch",
@@ -22,8 +22,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
-    "@jest/globals": "^30.2.0",
-    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/chrome": "^0.1.36",
     "adm-zip": "^0.5.16",
@@ -31,12 +29,11 @@
     "corepack": "^0.34.6",
     "globals": "^17.1.0",
     "husky": "^9.1.7",
-    "jest": "^30.2.0",
     "npm-check-updates": "^19.3.1",
-    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1",
+    "vitest": "^4.0.18",
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1"
   }
