--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Lint
-        run: pnpm run lint
+        run: pnpm lint
+
+      - name: Type Check
+        run: pnpm type:check
 
       - name: Test
-        run: pnpm run test
+        run: pnpm test
