chore(ci): Check and verify version numbers are correct. Make sure new version is 2.4.0
Signed-off-by: Jared Scott <jared.scott@variable.team>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Verify versions
+        run: pnpm verify-version
+
       - name: Lint
         run: pnpm lint
 
